# doofie-Client-source-Code

./: .gitignore  PHASE_1.md  PHASE_2.md  PROJEKT-INFO.md  README.md  fix_assets.py  index.html  inspect_branding.py  inspect_class.py  package-lock.json  package.json  patch_nrc.py  repack_nrc.py  tailwind.config.js  tester-window.html  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
backend/: news.json
doofie-bossraid-plugin/: build.gradle  settings.gradle
doofie-chaos-plugin/: settings.gradle
doofie-hardcore-plugin/: README.md  settings.gradle
doofie-hardcore-plugin/resourcepack/: README.md
doofie-installer/: index.html  package.json  vite.config.ts
doofie-jaeger-plugin/: settings.gradle
doofie-kingdoms-plugin/: settings.gradle
doofie-lifesteal-plugin/: README.md  settings.gradle
doofie-lifesteal-plugin/resourcepack/: README.md
doofie-lobby-plugin/: settings.gradle
doofie-mod/: build.gradle  gradle.properties  settings.gradle
doofie-pvp-plugin/: settings.gradle
doofie-pvp-plugin/arenen/: arena_sword.dschem  arena_uhc.dschem
doofie-skyblock-plugin/: settings.gradle
doofie-skyblock-plugin/schematics/: insel_gross.dschem  insel_klassisch.dschem
doofie-skywars-plugin/: settings.gradle
doofie-skywars-plugin/schematics/: sw_mitte.dschem  sw_spawn.dschem
doofie-smp-plugin/: settings.gradle
doofie-smp-plugin/datapack/: README.md
doofie-wecker-plugin/: build.gradle  gradle.properties  settings.gradle
doofie-zombie-plugin/: settings.gradle
netzwerk/: README.md  pack-sha1.txt  velocity.toml
netzwerk/DoofieNetzwerk-Pack/: pack.mcmeta
src/: App.css  App.svelte  App.tsx  config.ts  index.css  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: launcher.py
src-tauri/src/: account.rs  cli.rs  config.rs  error.rs  launch_engine.rs  launcher.rs  main.rs  minecraft.rs  modloader.rs  modpack.rs  profile.rs  shader.rs  updater.rs
src-tauri/src/commands/: analytics_command.rs  assets_command.rs  cape_command.rs  content_command.rs  crash_fix_command.rs  deep_link_handler.rs  doofie_commands.rs  file_command.rs  friends_command.rs  minecraft_auth_command.rs  minecraft_command.rs  mod.rs  oauth_error_html.rs  oauth_success_html.rs  pack_fallback_commands.rs  path_commands.rs  permission_commands.rs  process_command.rs  profile_command.rs  tester_command.rs
src-tauri/src/friends/: api.rs  chat_api.rs  models.rs  websocket.rs
src-tauri/src/integrations/: curseforge.rs  doofie_packs.rs  doofie_versions.rs  mod.rs  modrinth.rs  mrpack.rs
src-tauri/src/minecraft/: installer.rs
src-tauri/src/minecraft/api/: cape_api.rs  doofie_api.rs  mod.rs  payload_cms_api.rs  wordpress_api.rs
src-tauri/src/minecraft/auth/: minecraft_auth.rs
src-tauri/src/minecraft/downloads/: doofie_assets_download.rs  doofie_pack_downloader.rs  forge_libraries_download.rs  mod.rs  mod_downloader.rs  mod_resolver.rs
src-tauri/src/minecraft/dto/: mod.rs
src-tauri/src/minecraft/launch/: launcher.rs
src-tauri/src/minecraft/modloader/: mod.rs  neoforge_installer.rs
src-tauri/src/state/: active_skin_state.rs  config_state.rs  discord_state.rs  doofie_packs_state.rs  doofie_versions_state.rs  event_state.rs  mod.rs  process_state.rs  profile_state.rs  state_manager.rs
src-tauri/src/utils/: api_utils.rs  deep_link_utils.rs  download_utils.rs  file_utils.rs  log_archive.rs  mc_utils.rs  migration_utils.rs  mod.rs  path_utils.rs  profile_utils.rs  referral_utils.rs  repair_utils.rs  security_utils.rs  string_utils.rs  symlink_utils.rs  trash_utils.rs  updater_utils.rs
src/components/: FullscreenEffectRenderer.tsx  GameConsole.svelte  NewsPanel.css  NewsPanel.svelte  NewsPanel.tsx  Sidebar.css  Sidebar.svelte  Sidebar.tsx  ThemeInitializer.tsx  ThemeSelector.tsx  VersionInstaller.css  VersionInstaller.tsx  WebLandingOverlay.tsx
src/constants/: permissions.ts
src/data/: jokes.ts  mock-data.ts
src/hooks/: useFriendsWebSocket.ts  useGlobalDragAndDrop.tsx  useLauncherTheme.ts  useLocalContentManager.ts  useModrinthInstaller.tsx  usePlayerAvatar.ts  useProcessEvents.ts  useProfileLaunch.tsx  useResolvedLoaderVersion.ts  useSeasonalEvents.ts
src/i18n/: i18n.ts
src/lib/: router.tsx  tauri-event-shim.ts  tauri-shim.ts
src/pages/: AccountManager.css  AccountManager.svelte  AccountManager.tsx  CapeManager.css  CapeManager.svelte  CapeManager.tsx  Home.css  Home.svelte  Home.tsx  ModManager.css  ModManager.svelte  ModManager.tsx  ProfileManager.svelte  (+10 more)
website/: index.html  netzwerk.html
(+4056 files in other folders)
