[package]
name = "minecraft-launcher"
version = "2.0.0"
description = "Cookie Client - Minecraft Launcher"
authors = ["Cookie"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
which = "5.0"
zip = "0.6"
urlencoding = "2.1"
url = "2.5"
open = "5.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
